# mechamap

./: LICENSE  README.md  neuromap.py  pyproject.toml  requirements.txt
mechamap/: __init__.py  cli.py  config.py
mechamap/analyzers/: __init__.py  base.py  baseline_activation.py  circuit_acdc.py  circuit_cdt.py  circuit_eap.py  edge_grad_prune.py
mechamap/benchmarks/: mib_adapter.py
mechamap/core/: __init__.py  activations.py  graph.py  model_loader.py  patching.py
mechamap/visuals/: dashboard.py  graphviz_export.py
old_versions_scripts/: neuromap.py
